# FileTransferKit

./: .gitignore  CMakeLists.txt  FileTransferKit.pri  FileTransferKit.pro  FileTransferKitSources.pri  README.md
examples/filetransferclienttest/: filetransferclienttest.pro  main.cpp
src/: FileTransferClient.cpp  FileTransferClient.h  FileTransferKitLib.pro
